# FileManager

./: .gitignore  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Filemgr.pro  Filemgr.pro.user.7248db2  README.md  branch1.txt  cell_main.cpp  cell_main.h  cell_main.ui  config.json  configmanager.cpp  configmanager.h  filemgr.rc  main.cpp  mainwindow.ui  recyclebinwindow.cpp  recyclebinwindow.h  recyclebinwindow.ui  res.qrc  resources.qrc  settingdialog.cpp  settingdialog.h  settingdialog.ui  themechoose.cpp  themechoose.h  themechoose.ui  九星连组第二次项目流程图.drawio  架构设计.md
FileManager/: .gitignore  CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.h  FileManager.pro  FileOperations.cpp  FileOperations.h  filemanager.cpp  filemanager.h  filemanager.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
FileManager/Config/: 1.xml  ConfigManager.h  Header.h
FileManager/FileOperation/: FileOperations.cpp  FileOperations.h
FileManager/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
FileOperation/: FileOperation.h
